<resources>
    <string name="app_name">empty</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_alarm">Wekkers</string>
    <string name="title_options">Options</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="van">Van:</string>
    <string name="naar">Naar:</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="wekker">Wekker</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="tempor">tempor</string>
    <string name="temp">yes!</string>
    <string name="bike">🚲</string>
    <string name="foot">🚶</string>
    <string name="options">options</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="title_activity_not">NotActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_calculate_route">activity_calculate_route</string>
</resources>
