<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard_fragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_alarm" />
    <item
        android:icon="@drawable/ic_settings_foreground"
        android:id="@+id/navigation_bluetooth"
        android:title="Bluetooth" />

    <item
        android:icon="@drawable/ic_settings_foreground"
        android:id="@+id/navigation_temp"
        android:title="@string/title_options" />

    <item
        android:icon="@drawable/ic_splashscreen"
        android:id="@+id/navigation_calendar"
        android:title="Calendar" />

</menu>